--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="group-form">  
           <label> Category </label>
             <select>
-              <option>Skirt</option>
+              <option>Jumpsuit</option>
               <option>Dress</option>
               <option>Hijab</option>
             </select>
